[HIMIN-163] refactor: StandardCharsets.UTF_8 사용